# ros

./: .gitattributes  .gitignore  Cargo.toml  ISSUES.md  LICENSE  NOTICE  OPEN-AI-BUILD-WEEK-13-21-JULY-2026.md  PLAN.md  README.md  RESTAURANT_OPERATING_SYSTEM_PRODUCT_VISION.md  TRADEMARKS.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  osv-scanner.yml
apps/owner-dashboard/: README.md  app.js  index.html  styles.css
apps/ros/: README.md  analysis_options.yaml  pubspec.yaml
apps/ros/android/: gradle.properties  key.properties.example
apps/ros/integration_test/: simple_test.dart
apps/ros/lib/: app.dart  main.dart
apps/ros/linux/: CMakeLists.txt
apps/ros/rust/: Cargo.toml  cargokit.yaml
apps/ros/rust/src/: frb_generated.rs
apps/ros/rust/src/api/: simple.rs
apps/ros/rust_builder/: pubspec.yaml
apps/ros/test/: appearance_test.dart  branch_time_test.dart  diagnostics_privacy_test.dart  money_input_test.dart  pos_workspace_test.dart  remote_menu_image_catalog_test.dart  reports_controls_test.dart  widget_test.dart
crates/ros_bridge/: Cargo.toml
crates/ros_bridge/src/: lib.rs
crates/ros_core/: Cargo.toml
crates/ros_core/src/: entitlement.rs  lib.rs  pricing.rs
crates/ros_diagnostics/: Cargo.toml
crates/ros_diagnostics/src/: lib.rs
crates/ros_sqlcipher_ffi/: Cargo.toml
crates/ros_sqlcipher_ffi/src/: lib.rs
crates/ros_storage/: Cargo.toml  build.rs
crates/ros_storage/src/: lib.rs  receipts.rs  recovery.rs
crates/ros_sync_client/: Cargo.toml
crates/ros_sync_client/src/: lib.rs
database/cloud-migrations/: 0001_tenant_event_log.sql  0002_tenant_integrity_and_forced_rls.sql  0003_sync_event_actor_and_immutability.sql  0004_sync_acknowledgements_and_device_grants.sql
database/local-migrations/: 0001_foundation.sql  0002_tenant_catalog.sql  0003_local_installation_identity.sql  0004_sales_invoices_and_outbox.sql  0005_financial_integrity_hardening.sql  0006_menu_item_images.sql  0007_catalog_price_updates_and_unused_product_deletion.sql  0008_restaurant_tables_and_draft_orders.sql  0009_draft_order_settlements.sql  0010_kitchen_tickets.sql  0011_invoice_refunds.sql  0012_inventory_movements.sql  0013_inventory_opening_once.sql  0014_expenses.sql  0015_cash_drawer_sessions.sql  0016_local_staff_security.sql  0017_customers_and_privacy.sql  0018_split_payment_refund_integrity.sql  0019_staff_role_history.sql  0020_inventory_low_stock_thresholds.sql  0021_inventory_low_stock_threshold_clears.sql  0022_kitchen_ticket_cancellations.sql  0023_kitchen_cancellation_relationship_integrity.sql  0024_kitchen_notes.sql  0025_product_modifier_options.sql  0026_local_authorization_hardening.sql  0027_product_image_catalog_provenance.sql  0028_pricing_adjustments.sql  0029_invoice_voids.sql  0030_accounting_day_closes.sql  0031_correction_approvals.sql  0032_suppliers_and_purchases.sql  0033_product_recipes.sql  0034_owner_recovery_verifier.sql  0035_category_images.sql  0036_category_image_catalog_provenance.sql
demo/: check-phoneme-first-line.sh  voiceover-closing.txt  voiceover-opening.txt  voiceover-script.txt
docs/: README.md
docs/adr/: 0001-flutter-rust-client-architecture.md  0002-local-database-encryption.md  0003-cloud-provider-selection.md  0004-rust-owned-local-key-store.md  0005-portable-recovery-envelope.md  0006-dual-person-correction-approval.md  0007-credential-recovery.md  0008-thermal-printer-support.md  0009-commercial-edition-terms.md  0010-edition-data-topology-and-switching.md
docs/assets/: menu-image-provenance.md
docs/chat-sessions/: 0001-openai-chatgpt-codex.md  0002-codex-auto.md  0003-cursor-auto.md  0004-openai-chatgpt-codex.md  0006-cursor-auto.md  0007-cursor-auto.md  README.md
docs/contracts/: cash-drawer-ledger-v1.md  catalog-availability-v1.md  correction-approval-v1.md  customer-privacy-v1.md  entitlement-evaluation-v1.md  financial-export-v1.md  immutable-receipt-reprint-v1.md  inventory-ledger-v1.md  kitchen-cancellation-v1.md  kitchen-instructions-v1.md  local-audit-timeline-v1.md  local-diagnostics-v1.md  local-staff-session-v1.md  portable-recovery-v1.md  pricing-adjustments-v1.md  remote-menu-image-catalog-v1.md  split-payment-ledger-v1.md  suppliers-purchases-recipes-v1.md
docs/editions/: README.md  community-delivery-contract.md  community.md  enterprise.md  professional.md
docs/runbooks/: accessibility-acceptance.md  backup-and-recovery-design.md  cloud-schema-verification.md  community-user-guide.md  dependency-evidence-and-sbom.md  founder-intervention-log.md  incident-response.md  local-development.md  owner-guides.md  professional-sync-contract.md  release-packaging.md  release-verification.md  sqlcipher-artifact-manifest.md
docs/security/: data-classification.md  threat-model.md
infra/: README.md
infra/environments/staging/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/cloud_run_api/: main.tf
infra/modules/cloud_sql/: main.tf
infra/modules/object_store/: main.tf
openai-build-week/: README.md
ros-website/: .firebaserc  README.md  firebase.json  package-lock.json  package.json
ros-website/public/downloads/: .gitignore  README.md  ros-linux-x86_64.AppImage.sig  ros-windows-x64.exe.sig
ros-website/public/keys/: README.md  gotigin-ros-release.pub.asc
ros-website/src/app/: globals.css  layout.tsx  page.tsx
ros-website/src/components/: github-icon.tsx  header.tsx  product-download.tsx
ros-website/src/lib/: downloads.ts  site.ts
scripts/: build-android-release.sh  build-linux-release.sh  build-windows-release.ps1  generate-dependency-evidence.sh  generate-release-signing-keys.ps1  generate-release-signing-keys.sh  generate-sbom-placeholder.sh  provision-sqlcipher-artifacts.ps1  provision-sqlcipher-artifacts.sh  uninstall-local-ros.py  uninstall-local-ros.sh  verify-cloud-migrations.sh
scripts/lib/: release-common.sh
scripts/windows/: ros-windows-installer.iss
secrets/signing/: README.md
services/api/: .env.example  Cargo.toml  README.md  openapi.yaml
services/api/src/: auth.rs  main.rs  owner.rs  sync.rs  sync_store.rs
(+38 files in other folders)
