[workspace]
members = [
    "crates/ros_core",
    "crates/ros_bridge",
    "crates/ros_sqlcipher_ffi",
    "crates/ros_storage",
    "crates/ros_diagnostics",
    "crates/ros_sync_client",
  "services/api",
  "apps/ros/rust",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["GOTIGIN SOFTWARE & HARDWARE PRIVATE LIMITED"]
repository = "https://github.com/Gotigin/RestaurantOperatingSystem"

[workspace.lints.rust]
unsafe_code = "forbid"
