[package]
name = "ros_diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Privacy-allowlisted local diagnostics for Gotigin Restaurant Operating System"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
uuid = { version = "=1.24.0", features = ["v7"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
