[package]
name = "api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
axum = "0.8"
base64 = "=0.22.1"
jsonwebtoken = { version = "=10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
ros_core = { path = "../../crates/ros_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.150"
sqlx = { version = "=0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki"] }
sqlx-postgres = { version = "=0.9.0", default-features = false, features = ["json", "time", "uuid"] }
time = { version = "=0.3.53", features = ["formatting", "parsing", "serde"] }
tokio = { version = "=1.52.3", features = ["fs", "macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tracing = { version = "=0.1.44", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "=0.3.23", default-features = false, features = ["fmt", "json", "std"] }
url = "=2.5.8"
uuid = { version = "=1.24.0", features = ["serde", "v7"] }

[dev-dependencies]
ed25519-dalek = { version = "=2.2.0", features = ["pem", "pkcs8", "rand_core"] }
rand_core = { version = "=0.6.4", features = ["getrandom"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "=1.52.3", features = ["test-util"] }
