[package]
name = "rust_lib_ros"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
# Cargokit currently builds the default development feature graph. A release
# artifact must deliberately opt into the production feature and cannot fall
# back to the bundled SQLCipher test source.
default = ["development-sqlcipher"]
development-sqlcipher = ["ros_storage/development-bundled-sqlcipher"]
production-sqlcipher = ["ros_storage/production-sqlcipher"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
serde_json = "=1.0.151"
ros_bridge = { path = "../../../crates/ros_bridge" }
ros_core = { path = "../../../crates/ros_core" }
ros_diagnostics = { path = "../../../crates/ros_diagnostics" }
ros_storage = { path = "../../../crates/ros_storage", default-features = false, features = ["platform-keyring"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
sha2 = "=0.10.9"
